Add MonitorBlockEntity and camera linking functionality
Implemented MonitorBlockEntity with camera linking and portal management. Added CameraBlock, a tickable block entity interface, and updated MonitorBlock for interaction. Extended LinkTool with directional data saving(not implemented in the monitor yet) and registered necessary block entities.

--- a/src/main/resources/assets/lechcctv/lang/en_us.json
+++ b/src/main/resources/assets/lechcctv/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.lechcctv.link_tool": "Link Tool",
 
   "block.lechcctv.camera_block": "Camera Block",
+  "block.lechcctv.monitor_block": "Monitor Block",
   "itemgroup.lechcctv.cctv_items": "CCTV"
 }
