--- a/src/main/resources/assets/lechcctv/lang/en_us.json
+++ b/src/main/resources/assets/lechcctv/lang/en_us.json
@@ -5,5 +5,6 @@
 
   "block.lechcctv.camera_block": "Camera Block",
   "block.lechcctv.monitor_block": "Monitor Block",
-  "itemgroup.lechcctv.cctv_items": "CCTV"
+  "itemgroup.lechcctv.cctv_items": "CCTV",
+  "block.lechcctv.monitor": "Monitor"
 }
