Refactor Camera to CCamera and improve linking logic
Renamed the Camera class to CCamera to align with naming conventions and updated all related references. Enhanced LinkToolItem to support both CAMERA_BLOCK and CAMERA with direction handling. Added camera type detection in MonitorBlockEntity and a corresponding JSON model for the camera item.

--- a/src/main/resources/assets/lechcctv/lang/en_us.json
+++ b/src/main/resources/assets/lechcctv/lang/en_us.json
@@ -2,9 +2,9 @@
   "item.lechcctv.screen": "Screen",
   "item.lechcctv.lens": "Lens",
   "item.lechcctv.link_tool": "Link Tool",
-
   "block.lechcctv.camera_block": "Camera Block",
   "block.lechcctv.monitor_block": "Monitor Block",
   "itemgroup.lechcctv.cctv_items": "CCTV",
-  "block.lechcctv.monitor": "Monitor"
+  "block.lechcctv.monitor": "Monitor",
+  "block.lechcctv.camera": "Camera"
 }
